added Fillup calcs and stats

--- a/PumprREST/WebContent/index.html
+++ b/PumprREST/WebContent/index.html
@@ -25,6 +25,7 @@
 
 <!-- Pumpr -->
 <script src="./js/pumpr-rest.js" charset="utf-8"></script>
+<script src="./js/pumpr-calc.js" charset="utf-8"></script>
 <script src="./js/pumpr-ui.js" charset="utf-8"></script>
 <script src="./js/app.js" charset="utf-8"></script>
 
@@ -41,7 +42,7 @@
         <span>Pumpr</span>
       </div>
       <div>
-        <ul class='nav navbar-nav'>
+        <ul class='nav nav-pills'>
           <li class='active clickable' id='list'>List</li>
           <li class='clickable' id='new'>New</li>
           <li class='clickable' id='chart'>Chart</li>
